api_versioned_docs/version-12.0.0-rc1/avalonia/animation/index.mdx
---
title: 'Avalonia.Animation'
hide_title: true
slug: '/avalonia/animation'
uid: 'Avalonia.Animation'
commentId: 'N:Avalonia.Animation'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Animation'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Animation Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia.Animation`

</div>

## Types

- [Animatable](animatable.mdx) - Base class for all animatable objects.
- [Animation](animation.mdx) - Tracks the progress of an animation.
- [BoolTransition](booltransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [bool](xref:System.Boolean) types.
- [BoxShadowsTransition](boxshadowstransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [Avalonia.Media.BoxShadows](xref:Avalonia.Media.BoxShadows) type.
- [BrushTransition](brushtransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [Avalonia.Media.IBrush](xref:Avalonia.Media.IBrush) type.
- [ColorTransition](colortransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [Avalonia.Media.Color](xref:Avalonia.Media.Color) type.
- [CompositePageTransition](compositepagetransition.mdx) - Defines a composite page transition that can be used to combine multiple transitions.
- [CornerRadiusTransition](cornerradiustransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [Avalonia.CornerRadius](xref:Avalonia.CornerRadius) type.
- [CrossFade](crossfade.mdx) - Defines a cross-fade animation between two [Avalonia.Visual](xref:Avalonia.Visual)s.
- [Cue](cue.mdx) - Determines the time index for a [Avalonia.Animation.KeyFrame](xref:Avalonia.Animation.KeyFrame).
- [CueTypeConverter](cuetypeconverter.mdx)
- [DoubleTransition](doubletransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [double](xref:System.Double) types.
- [EffectTransition](effecttransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [Avalonia.Media.IEffect](xref:Avalonia.Media.IEffect) type.
- [FillMode](fillmode.mdx)
- [FloatTransition](floattransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [float](xref:System.Single) types.
- [IAnimation](ianimation.mdx) - Interface for Animation objects
- [IAnimationSetter](ianimationsetter.mdx)
- [ICustomAnimator](icustomanimator.mdx)
- [IPageTransition](ipagetransition.mdx) - Interface for animations that transition between two pages.
- [IProgressPageTransition](iprogresspagetransition.mdx) - An [Avalonia.Animation.IPageTransition](xref:Avalonia.Animation.IPageTransition) that supports progress-driven updates.
- [ITransition](itransition.mdx) - Interface for Transition objects.
- [IntegerTransition](integertransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [int](xref:System.Int32) types.
- [InterpolatingAnimator&lt;T&gt;](interpolatinganimator-1.mdx)
- [InterpolatingTransitionBase&lt;T&gt;](interpolatingtransitionbase-1.mdx) - The base class for user-defined transition that are doing simple value interpolation
- [IterationCount](iterationcount.mdx) - Determines the number of iterations of an animation.
Also defines its repeat behavior.
- [IterationCountTypeConverter](iterationcounttypeconverter.mdx)
- [IterationType](iterationtype.mdx) - Defines the valid modes for a [Avalonia.Animation.IterationCount](xref:Avalonia.Animation.IterationCount).
- [KeyFrame](keyframe.mdx) - Stores data regarding a specific key
point and value in an animation.
- [KeyFrames](keyframes.mdx) - A collection of [Avalonia.Animation.KeyFrame](xref:Avalonia.Animation.KeyFrame)s.
- [KeySpline](keyspline.mdx) - Determines how an animation is used based on a cubic bezier curve.
X1 and X2 must be between 0.0 and 1.0, inclusive.
See https://docs.microsoft.com/en-us/dotnet/api/system.windows.media.animation.keyspline
- [KeySplineTypeConverter](keysplinetypeconverter.mdx) - Converts string values to [Avalonia.Animation.KeySpline](xref:Avalonia.Animation.KeySpline) values
- [PageSlide](pageslide.mdx) - Transitions between two pages by sliding them horizontally or vertically.
- [PageSlide.SlideAxis](pageslide-slideaxis.mdx) - The axis on which the [PageSlide](xref:Avalonia.Animation.PageSlide) should occur
- [PageTransitionItem](pagetransitionitem.mdx) - Describes a single visible page within a carousel viewport.
- [PlayState](playstate.mdx) - Determines the playback state of an animation.
- [PlaybackDirection](playbackdirection.mdx) - Determines the playback direction of an animation.
- [PointTransition](pointtransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [Avalonia.Point](xref:Avalonia.Point) type.
- [RelativePointTransition](relativepointtransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [Avalonia.RelativePoint](xref:Avalonia.RelativePoint) type.
- [Rotate3DTransition](rotate3dtransition.mdx)
- [SizeTransition](sizetransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [Avalonia.Size](xref:Avalonia.Size) type.
- [ThicknessTransition](thicknesstransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [Avalonia.Thickness](xref:Avalonia.Thickness) type.
- [TransformOperationsTransition](transformoperationstransition.mdx)
- [TransitionBase](transitionbase.mdx) - Defines how a property should be animated using a transition.
- [Transition&lt;T&gt;](transition-1.mdx) - Defines how a property should be animated using a transition.
- [Transitions](transitions.mdx) - A collection of [Avalonia.Animation.ITransition](xref:Avalonia.Animation.ITransition) definitions.
- [VectorTransition](vectortransition.mdx) - Transition class that handles [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) with [Avalonia.Vector](xref:Avalonia.Vector) type.
</ApiRefPage>

